// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action/types Auth testing Displays a snapshot for Auth testing 1`] = `
<div>
  <setauthenticated />
</div>
`;

exports[`Action/types Auth testing Displays a snapshot for Auth testing 2`] = `
<DocumentFragment>
  <setauthenticated />
</DocumentFragment>
`;

exports[`Action/types Auth testing Displays a snapshot for Login testing 1`] = `
<div>
  <loginuser />
</div>
`;

exports[`Action/types Auth testing Displays a snapshot for Login testing 2`] = `
<DocumentFragment>
  <loginuser />
</DocumentFragment>
`;

exports[`Action/types Auth testing Displays a snapshot for Logout testing 1`] = `
<div>
  <logoutuser />
</div>
`;

exports[`Action/types Auth testing Displays a snapshot for Logout testing 2`] = `
<DocumentFragment>
  <logoutuser />
</DocumentFragment>
`;
